# msi-calc

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  INSTALLATION_GUIDE.md  LICENSE  QUICK_REFERENCE.md  README.md  setup.sh
.github/workflows/: ci.yml  release.yml
src/: checkpoint.rs  config.rs  main.rs  pipeline.rs  tui.rs
